--- a/src/index.css
+++ b/src/index.css
@@ -18,4 +18,22 @@ body {
   button {
     margin-top: 10px;
   }
+
+  table {
+    text-align: center;
+    width: 100%;
+    border-collapse: collapse;
+  }
+  
+  th, td {
+    text-align: center;
+    border: 1px solid #ddd;
+    padding: 8px;
+  }
+  
+  th {
+    text-align: center;
+    background-color: #f2f2f2;
+  }
+  
   
