--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 /* App.css */
+
+body {
+  font-family: Arial, sans-serif;
+}
+
 .App {
     text-align: center;
   }
@@ -17,6 +22,7 @@
   }
   
   nav li {
+    position: relative;
     margin: 0 15px;
   }
   
@@ -38,4 +44,26 @@
     height: 15vh;
     padding: 20px;
   }
+
+  .dropdown {
+    display: none;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    background-color: #0047ab;
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    text-align: left;
+    flex-direction: column;
+    width: 200px;
+  }
+
+  nav li:hover .dropdown {
+    display: flex;
+  }
   
+  .dropdown a {
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+  }
