--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,8 @@ body {
   nav {
     background-color: #0047ab;
     padding: 10px 0;
+    color: white;
+    font-size: 20px;
   }
   
   nav ul {
